--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
         <button id=colorBtn>New COLORS</button>
         <span id="message"></span>
         <button class="mode">Easy</button>
-        <button class="mode selected">Hard</button>
+        <button class="mode selected">Normal</button>
+        <button class="mode">Hard</button>
     </div>
     <div id="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
